[gd_scene load_steps=16 format=2]

[ext_resource path="res://Managing/Colliders/PlayerDetection.tscn" type="PackedScene" id=1]
[ext_resource path="res://Managing/Colliders/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Entities/Enemies/Assets/HealthBarEmpty.png" type="Texture" id=3]
[ext_resource path="res://Entities/Enemies/Assets/HealthBarFull.png" type="Texture" id=4]
[ext_resource path="res://Entities/DamageManager.tscn" type="PackedScene" id=5]
[ext_resource path="res://Entities/Enemies/Gnomes/BuffGnome/BuffGnome.png" type="Texture" id=6]
[ext_resource path="res://Entities/Enemies/Gnomes/BuffGnome/BuffGnome.gd" type="Script" id=7]
[ext_resource path="res://Entities/Effects/Blood/Blood.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 5.5, 5 )

[sub_resource type="CircleShape2D" id=4]

[sub_resource type="CircleShape2D" id=5]
radius = 103.078

[sub_resource type="Animation" id=7]
resource_name = "Attack"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8 ]
}

[sub_resource type="Animation" id=1]
resource_name = "Idle"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Walk"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5 ]
}

[node name="BuffGnome" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 6 )
offset = Vector2( -1, -13 )
hframes = 3
vframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -5 )
shape = SubResource( 6 )

[node name="DamageManager" parent="." instance=ExtResource( 5 )]
position = Vector2( 0, -11 )
maxHealth = 110
spritePath = NodePath("../Sprite")
deathParticles = ExtResource( 8 )

[node name="Collisions" type="Node2D" parent="."]
visible = false

[node name="Hurtbox" parent="Collisions" instance=ExtResource( 2 )]
visible = false
position = Vector2( 0, -8 )
collision_layer = 4

[node name="CollisionShape2D" parent="Collisions/Hurtbox" index="0"]
shape = SubResource( 4 )

[node name="PlayerDetection" parent="Collisions" instance=ExtResource( 1 )]
visible = false

[node name="CollisionShape2D" parent="Collisions/PlayerDetection" index="0"]
shape = SubResource( 5 )

[node name="CollisionChecker" type="RayCast2D" parent="Collisions"]
enabled = true

[node name="FloorChecker" type="RayCast2D" parent="Collisions"]
enabled = true
cast_to = Vector2( 0, 2 )

[node name="Timers" type="Node" parent="."]

[node name="StateChange" type="Timer" parent="Timers"]
one_shot = true
autostart = true

[node name="Attack" type="Timer" parent="Timers"]
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 7 )
anims/Idle = SubResource( 1 )
anims/RESET = SubResource( 2 )
anims/Walk = SubResource( 3 )

[node name="Healthbar" type="TextureProgress" parent="."]
margin_left = -9.0
margin_top = -30.0
margin_right = 9.0
margin_bottom = -25.0
max_value = 50.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )

[connection signal="hurt" from="Collisions/Hurtbox" to="DamageManager" method="take_damage"]
[connection signal="timeout" from="Timers/StateChange" to="." method="_on_state_change_timeout"]
[connection signal="timeout" from="Timers/Attack" to="." method="attack"]

[editable path="Collisions/Hurtbox"]
[editable path="Collisions/PlayerDetection"]
